Fix margin-bottom for RSVP-button on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,7 +129,6 @@ main {
     border: 0px;
     color: black;
     margin-top: 0.5rem;
-    margin-bottom: 0.5rem;
 }
 
 #button-rsvp-firm {
@@ -362,6 +361,7 @@ footer i {
         padding: 2px 8px;
         font-size: 120%;
         margin-top: 1.2rem;
+        margin-bottom: 1rem;
     }
 
     /* Styles for lower-content */
